# agent1poc

./: .gitignore  README.md  download_demo_data.py  pyproject.toml  requirements.txt  run_pipeline.py  server.py  test_dispatch.py  todo.md
claude-skill/: bioinformatics.md
data/demo_multimodal/: manifest.json
data/demo_multimodal/WES/case_donor1/: wes_stub.json
data/demo_multimodal/WES/case_donor2/: wes_stub.json
data/demo_multimodal/WES/ctrl_donor1/: wes_stub.json
data/demo_multimodal/WES/ctrl_donor2/: wes_stub.json
src/agent_pipeline/: __init__.py  export.py  figures.py  jobs.py  mcp_server.py  orchestrator.py  prompts.py  providers.py  session.py  state.py  tools.py
src/agent_pipeline/agents/: planner.py  reporter.py  scrna_agent.py  wes_agent.py
src/agent_pipeline/prompts/: planner.py  reporter.py  scrna.py  wes.py
src/agent_pipeline/steps/: __init__.py  alignment.py  annotation.py  clustering.py  detect.py  diffexp.py  gsea.py  mutation.py  qc.py
static/: index.html
